# AiBToS-Project3

./: .gitignore  CMakeLists.txt  HartIstrailOutput.txt  HilbertSnake.txt  README.md  hilbert.py  hp_strings.txt  hpscore.py  hpscore2.py  run_hart_istrail.sh  run_hilbert_snake.sh
src/: FoldingAlgorithm.h  HartIstrail.cpp  HartIstrail.h  HilbertCurve.cpp  HilbertCurve.h  Progam.cpp
